accessible first slide

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Accessibility in sixty minutes</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/night.css">
@@ -25,29 +25,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1 style="font-size: 5rem">Accessibility<br /> in sixty minutes<br />⏲</h1>
+					<h1 style="font-size: 5rem; width: 50rem; margin: 0 auto;">Accessibility in sixty minutes</h1>
+					<aside style="font-size: 5rem; margin-top: 4rem;" aria-hidden="true">⏲</aside>
 				</section>
-				<!-- <section>
-					<p class="fragment">Why is talking about accessibility<br /> difficult?</p>
-					<p class="fragment" style="font-size: 3.5rem">Because talking about disability<br /> is <strong>awkward</strong>.</p>
-				</section>
-				<section>
-					<h1 style="font-size: 3rem">WHO defines...</h1>
-					<div style="display: flex">
-						<div style="flex: 1">
-							<h2 style="font-size: 2rem">1980</h2>
-							<p>Disability as personal attribute</p>
-							<blockquote style="font-size: 1rem">“In the context of health experience,<br /> a disability is any restriction<br /> or lack of ability (resulting from an impairment)<br /> to perform an activity [...]<br /> within the range considered normal for a human being.”</blockquote>
-							<p>– World Health Organization</p>
-						</div>
-						<div style="flex: 1">
-							<h2 style="font-size: 2rem">Today</h2>
-							<p>Disability as context dependent</p>
-							<blockquote style="font-size: 1rem">“Disability is not just a health problem. It is a complex phenomenon, reflecting the interaction between features of a person’s body and features of the society in which they live.”</blockquote>
-							<p>– World Health Organization</p>
-						</div>
-					</div>
-				</section> -->
 			</div>
 		</div>
 
