--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="plugin/accessibility/helper.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -83,6 +84,9 @@
 							}, 2000);
 						</script>
 					</section>
+					<section>
+						<h1>Change the language</h1>
+					</section>
 			</div>
 		</div>
 
@@ -96,6 +100,9 @@
 			Reveal.initialize({
 				history: true,
 				dependencies: [
+					{ src: 'plugin/accessibility/helper.js', async: true, condition: function() { 
+						return !!document.body.classList; 
+					}},
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
